# perspective

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/si/fri/jus/perspective/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/si/fri/jus/perspective/: AppState.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/si/fri/jus/perspective/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
perspective/: .gitignore  CMakeLists.txt  main.cpp
perspective/lib/: Line.cpp  Line.h  Line.hpp  Tracker.cpp  VanishingPoint.cpp  VanishingPoint.h  lib_files.cmake  perspective.cpp  perspective.h  perspective.hpp
